force-app/main/default/objects/FF123_Transaction__c/FF123_Transaction__c.object-meta.xml
<CustomObject>
    <description>Data manually imported for now - Proof of Concept - Should be an External Object</description>
    <label>FF123 Transaction</label>
    <nameField>
        <displayFormat>FF-{000}</displayFormat>
        <label>FF123 Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FF123 Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>