force-app/main/default/objects/FF123_Transaction__c/fields/Coniq_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Coniq_Transaction_ID__c</fullName>
    <externalId>true</externalId>
    <label>Coniq Transaction ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>