force-app/main/default/objects/FF123_Transaction__c/fields/Promotion_Redemption__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Redemption__c</fullName>
    <label>Promotion Redemption</label>
    <referenceTo>Promotion_Redemption__c</referenceTo>
    <relationshipLabel>FF123 Transaction</relationshipLabel>
    <relationshipName>FF123_Transaction</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>