force-app/main/default/objects/FF123_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Promotion_Redemption__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Transaction_Value__c</columns>
    <columns>Coniq_Transaction_ID__c</columns>
    <columns>Brand__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>